Add luatex requirement line

--- a/src/cv.tex
+++ b/src/cv.tex
@@ -57,7 +57,7 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
+\RequirePackage{luatex85}
 \documentclass[]{deedy-resume-reversed}
 \usepackage{fancyhdr}
 
