Switch to LuaTeX

--- a/src/cv.tex
+++ b/src/cv.tex
@@ -57,7 +57,7 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\documentclass[]{deedy-resume-reversed}
+\documentclass{deedy-resume-reversed}
 \usepackage{fancyhdr}
 
 \pagestyle{fancy}
