Fix textbullets in cv

--- a/src/cv.tex
+++ b/src/cv.tex
@@ -242,9 +242,9 @@
 \section{Skills}
 \subsection{Programming}
 \location{3+ years:}
-Python \textbullet{} C/C++ \textbullet{} \\ Java \textbullet{} Javascript\\
+Python \textbullet{} C/C++ \\ Java \textbullet{} Javascript\\
 \location{1+ years:}
-PHP \textbullet{} HTML/CSS \\ \textbullet{} Haskell \\
+PHP \textbullet{} HTML/CSS \\ Haskell \\
 \location{0+ years:}
 Matlab \textbullet{} PHP \\
 \sectionsep
