--- a/src/cv.tex
+++ b/src/cv.tex
@@ -59,6 +59,7 @@
 
 \documentclass{deedy-resume-reversed}
 \usepackage{fancyhdr}
+\usepackage{hyperref}
 
 \pagestyle{fancy}
 \fancyhf{}
@@ -291,8 +292,8 @@ National Merit Scholarship Finalist \\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Links}
-Github:// \href{https://github.com/}{\bf yoelkastro} \\
-LinkedIn://  \href{https://www.linkedin.com/}{\bf yoelkastromorlevi}
+Github: \href{https://github.com/}{\bf github.com/yoelkastro} \\
+LinkedIn://  \href{https://www.linkedin.com/}{\bf linkedin.com/in/yoel-kastro-morlevi/}
 \sectionsep
 
 \end{minipage}
