--- a/src/cv.tex
+++ b/src/cv.tex
@@ -245,16 +245,17 @@
 \location{3+ years:}
 Python \textbullet{} C/C++ \\ Java \textbullet{} Javascript\\
 \location{1+ years:}
-PHP \textbullet{} HTML/CSS \\ Haskell \\
+PHP \textbullet{} HTML/CSS \\ Haskell \textbullet{} C# \\
 \location{0+ years:}
 Matlab \textbullet{} PHP \\
 \sectionsep
 
 \subsection{Technology}
 Git/Github \textbullet{} AWS \textbullet{} Linux \\
-UNIX \textbullet{} Windows \textbullet{} ROS \\
+UNIX \textbullet{} Windows \\
 Artificial Intelligence \textbullet{} Automation \\
-Embedded Software \textbullet{} Raspberry Pi \\
+Microcontrollers \textbullet{} Raspberry Pi \\
+Microsoft / Google Office \textbullet{} CAD
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
