Fill other work section

--- a/src/cv.tex
+++ b/src/cv.tex
@@ -267,7 +267,10 @@ Microsoft / Google Office \textbullet{} CAD
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Other Work}
-University of Warwick Robotics Society President (2023-24) \\
+University of Warwick Robotics Society President 2023-24 \\
+Unibots UK inter-university robotics competition, 3rd place \\
+Speaker at PyCon UK 2019 \\
+
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
