--- a/src/cv.tex
+++ b/src/cv.tex
@@ -270,7 +270,6 @@ Microsoft / Google Office \textbullet{} CAD
 University of Warwick Robotics Society President 2023-24 \\
 Unibots UK inter-university robotics competition, 3rd place \\
 Speaker at PyCon UK 2019 \\
-
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -278,8 +277,9 @@ Speaker at PyCon UK 2019 \\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Links}
-Github: \href{https://github.com/}{\bf github.com/yoelkastro} \\
-LinkedIn://  \href{https://www.linkedin.com/}{\bf linkedin.com/in/yoel-kastro-morlevi/}
+Github: \href{https://github.com/yoelkastro}{\bf yoelkastro} \\
+LinkedIn:  \href{https://www.linkedin.com/in/yoel-kastro-morlevi}{\bf yoel-kastro-morlevi/}
+Website: \href{https://www.yoelkastro.me}{\bf yoelkastro.me}
 \sectionsep
 
 \end{minipage}
