Add content to experience section

--- a/src/cv.tex
+++ b/src/cv.tex
@@ -97,11 +97,12 @@
 \section{Experience}
 \runsubsection{Create-4}
 \descript{| Deployment Engineering Intern }
-\location{March 2023 – Aug 2023 | Blackpool, UK}
+\location{March 2023 – August 2023 | Blackpool, UK}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightemize}
 \item Troubleshoot hardware and software for newly developed vape vending machine.
 \item Fix all problems to make sure all vending machines are deployment and commercial use ready.
+\item Interface with client to coordinate instalment and status of vending machines.
 \item Install and test all vending machines on-site at various locations.
 \end{tightemize}
 \sectionsep
@@ -110,21 +111,18 @@
 \descript{| Robotics Engineering Intern }
 \location{May 2021 – July 2021 | London, UK}
 \begin{tightemize}
-\item 
-\item Organized meetings with the vendor to receive in-depth product information and answers to cross-departmental questions.
-\item Participated on the Web Development Taskforce to provide AngularJS sites to internal customers.
-\item Participated in an internal CodeJam to prototype a blockchain application for managing a model supply-chain.
-\item Worked with a team to plan executive visit and team-building exercise for 200 employees.
+\item Design and build scalable software and circuit for autonomous excavation robot.
+\item Implement a user interface to communicate with excavation robot based on SPI.
+\item Implement precise motor control mechanisms using encoders.
+\item Reverse-engineer off-the-shelf electronics to implement and integrate into product.
 \end{tightemize}
 \sectionsep
 
-\runsubsection{My University ITS}
-\descript{| Assistant Support Specialist }
-\location{Aug 2015 – Oct 2016 | Somewhere, XX}
+\runsubsection{Idesse}
+\descript{| Computer Vision Intern }
+\location{June 2019 – August 2019 | Istanbul, Turkey}
 \begin{tightemize}
-\item Interacted with clients to assess their problems and implement a solution in an efficient, friendly manner.
-\item Prepared workstations and laptops for future use by company employees.
-\item Created scripts to automate common tasks and increase productivity.
+\item Create and train machine learning system recognize and count pharmaceutical items.
 \end{tightemize}
 \sectionsep
 
@@ -267,6 +265,7 @@ Microsoft / Google Office \textbullet{} CAD
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Other Work}
+Swiss Sports Hackdays Hackathon 2024 Participant \\
 University of Warwick Robotics Society President 2023-24 \\
 Unibots UK inter-university robotics competition, 3rd place \\
 Speaker at PyCon UK 2019 \\
