Add to and fix formatting of other work section

--- a/src/cv.tex
+++ b/src/cv.tex
@@ -131,9 +131,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Projects}
-\runsubsection{Space Robotics Team}
-\descript{| Path-Planning Lead}
-\location{Jan 2018 – Present | Somewhere, XX}
+\runsubsection{Fabric Keyboard}
+\descript{| MIDI Piano made out of fabric}
+\location{May 2021 –  | Somewhere, XX}
 \begin{tightemize}
 \item Spearhead the development effort for the path-planning functionality of a team of three robots.
 \item ROS provides movement servers and the planning is being implemented in Python to allow for fully-autonomous operation.
@@ -265,10 +265,13 @@ Microsoft / Google Office \textbullet{} CAD
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Other Work}
-Swiss Sports Hackdays Hackathon 2024 Participant \\
-University of Warwick Robotics Society President 2023-24 \\
-Unibots UK inter-university robotics competition, 3rd place \\
-Speaker at PyCon UK 2019 \\
+Swiss Sports Hackdays Hackathon Participant, 2024 \\
+\textbf{University of Warwick Robotics Society President, 2023-24} \\
+Unibots UK inter-university robotics competition 3rd place, 2021 \\
+\textbf{Speaker at PyCon UK, 2018/2019} \\
+Co-organizer of Pi Wars Turkey, 2019 \\
+\textbf{Hisar CS Coding Summit Programming Instructor, 2017-2020} \\
+Member of NoktaParantez First Robotics Competition Team, 2016-2018 \\
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
