Fix links again

--- a/src/cv.tex
+++ b/src/cv.tex
@@ -133,7 +133,8 @@
 \section{Projects}
 \runsubsection{Fabric Keyboard}
 \descript{| MIDI Piano made out of fabric}
-\location{May 2021 –  | Somewhere, XX}
+\location{May 2021 –  January 2022}
+\location{\href{https://github.com/yoelkastro/FabricKeyboard}{Github}}
 \begin{tightemize}
 \item Spearhead the development effort for the path-planning functionality of a team of three robots.
 \item ROS provides movement servers and the planning is being implemented in Python to allow for fully-autonomous operation.
@@ -143,6 +144,7 @@
 \runsubsection{Chit Chat}
 \descript{| Class Project for Distributed Client-Server Programming}
 \location{Jan 2018 – May 2018 | Somewhere, XX}
+\location{\href{}{Github}}
 \begin{tightemize}
 \item Lead the development of \textbf{\href{https://github.com/user/repo}{Chit Chat}}, an anonymous chat application created as a class project.
 \item Chit Chat provides real-time communication while utilizing a PHP backend and AngularJS frontend.
@@ -280,7 +282,7 @@ Member of NoktaParantez First Robotics Competition Team, 2016-2018 \\
 
 \section{Links}
 Github: \href{https://github.com/yoelkastro}{\bf yoelkastro} \\
-LinkedIn:  \href{https://www.linkedin.com/in/yoel-kastro-morlevi}{\bf yoel-kastro-morlevi/}
+LinkedIn:  \href{https://www.linkedin.com/in/yoel-kastro-morlevi}{\bf yoel-kastro-morlevi} \\
 Website: \href{https://www.yoelkastro.me}{\bf yoelkastro.me}
 \sectionsep
 
