Add to other work section

--- a/src/cv.tex
+++ b/src/cv.tex
@@ -272,6 +272,10 @@ Swiss Sports Hackdays Hackathon Participant, 2024 \\
 Unibots UK inter-university robotics competition 3rd place, 2021 \\
 \textbf{Speaker at PyCon UK, 2018/2019} \\
 Co-organizer of Pi Wars Turkey, 2019 \\
+\textbf{AP Scholar with Honors, 2019} \\
+Teknofest Robotic Conquest Competitor, 2018/19 \\
+\textbf{Pi Wars Cambridge Competitor, 2018/19} \\ 
+Teknofest UAV Competitor, 2018, \\
 \textbf{Hisar CS Coding Summit Programming Instructor, 2017-2020} \\
 Member of NoktaParantez First Robotics Competition Team, 2016-2018 \\
 \sectionsep
