Remove duplicate skill

--- a/src/cv.tex
+++ b/src/cv.tex
@@ -247,7 +247,7 @@ Python \textbullet{} C/C++ \\ Java \textbullet{} Javascript\\
 \location{1+ years:}
 PHP \textbullet{} HTML/CSS \\ Haskell \textbullet{} C\# \\
 \location{0+ years:}
-Matlab \textbullet{} PHP \\
+Matlab \\
 \sectionsep
 
 \subsection{Technology}
