--- a/src/cv.tex
+++ b/src/cv.tex
@@ -136,18 +136,21 @@
 \location{May 2021 –  January 2022}
 \location{\href{https://github.com/yoelkastro/FabricKeyboard}{Github}}
 \begin{tightemize}
-\item Spearhead the development effort for the path-planning functionality of a team of three robots.
-\item ROS provides movement servers and the planning is being implemented in Python to allow for fully-autonomous operation.
+\item Design and build circuit for MIDI piano using nRF52840 microcontroller, LiPO charging and capacitive touch sensing.
+\item Program MIDI protocols for use over microUSB and BLE for wireless function.
+\item Integrate into existing MIDI instrument ecosystems. 
 \end{tightemize}
 \sectionsep
 
-\runsubsection{Chit Chat}
-\descript{| Class Project for Distributed Client-Server Programming}
-\location{Jan 2018 – May 2018 | Somewhere, XX}
-\location{\href{}{Github}}
+\runsubsection{Image Registration Project}
+\descript{| Image Registration for use in identifying cancer tissue}
+\location{September 2023 – June 2023}
+\location{\href{https://github.com/yoelkastro/RegistrationProject}{Github}}
+\location{\href{https://yoelkastro.github.io/RegistrationProject/Report.pdf}{Report}}
 \begin{tightemize}
-\item Lead the development of \textbf{\href{https://github.com/user/repo}{Chit Chat}}, an anonymous chat application created as a class project.
-\item Chit Chat provides real-time communication while utilizing a PHP backend and AngularJS frontend.
+\item Develop a program for applying non-linear transformations to whole-slide images, as a university project.
+\item Adapt an algorithm to detect keypoints and generate non-trivial non-linear transformations to match images.
+\item Design a method to apply non-linear transformations to parts of images and combine them for the full image.
 \end{tightemize}
 \sectionsep
 
@@ -232,7 +235,7 @@
 \section{Education}
 
 \subsection{University of Warwick}
-\descript{Bachelor of Science in Computer Science}
+\descript{Bachelor of Science in Computer Science with Honors}
 \location{September 2024 | Coventry, UK}
 \sectionsep
 
