Make project links more clear

--- a/src/cv.tex
+++ b/src/cv.tex
@@ -134,7 +134,7 @@
 \runsubsection{Fabric Keyboard}
 \descript{| MIDI Piano made out of fabric}
 \location{May 2021 –  January 2022}
-\location{\href{https://github.com/yoelkastro/FabricKeyboard}{Github}}
+\location{\href{https://github.com/yoelkastro/FabricKeyboard}{\underline{\textbf{Github Link}}}}
 \begin{tightemize}
 \item Design and build circuit for MIDI piano using nRF52840 microcontroller, LiPO charging and capacitive touch sensing.
 \item Program MIDI protocols for use over microUSB and BLE for wireless function.
@@ -145,8 +145,8 @@
 \runsubsection{Image Registration Project}
 \descript{| Image Registration for use in identifying cancer tissue}
 \location{September 2023 – June 2023}
-\location{\href{https://github.com/yoelkastro/RegistrationProject}{Github}}
-\location{\href{https://yoelkastro.github.io/RegistrationProject/Report.pdf}{Report}}
+\location{\href{https://github.com/yoelkastro/RegistrationProject}{\underline{\textbf{Github Link}}}}
+\location{\href{https://yoelkastro.github.io/RegistrationProject/Report.pdf}{\underline{\textbf{Report Link}}}}
 \begin{tightemize}
 \item Develop a program for applying non-linear transformations to whole-slide images, as a university project.
 \item Adapt an algorithm to detect keypoints and generate non-trivial non-linear transformations to match images.
